edition = "2023";

package stream;
option go_package = "github.com/relab/gorums/stream";
option features.field_presence = IMPLICIT;

import "google/rpc/status.proto";

// Gorums is the main service for Gorums' per-node stream communication.
service Gorums {
    // NodeStream is a stream that connects a client to a Node.
    // The messages that are sent on the stream contain both Metadata
    // and an application-specific message.
  rpc NodeStream(stream Message) returns (stream Message);
}

// Message is sent together with application-specific message types,
// and contains information necessary for Gorums to handle the messages.
message Message {
  uint64                 message_seq_no = 1; // sequence number for this message
  string                 method         = 2; // method name to invoke on the server
  google.rpc.Status      status         = 3; // status of an invocation (for responses)
  repeated MetadataEntry entry          = 4; // per message client-generated metadata
  bytes                  payload        = 5; // serialized application message
}

// MetadataEntry is a key-value pair for Metadata entries.
message MetadataEntry {
  string key   = 1;
  string value = 2;
}
