edition = "2023";

package ordering;
option go_package = "github.com/relab/gorums/tests/ordering";

option features.field_presence = IMPLICIT;

import "gorums.proto";

service GorumsTest {
    rpc QC(Request) returns (Response) {
        option (gorums.quorumcall) = true;
    }

    rpc QCAsync(Request) returns (Response) {
        option (gorums.quorumcall) = true;
    }

    rpc UnaryRPC(Request) returns (Response) {}
}

message Request {
    uint64 Num = 1;
}

message Response {
    bool InOrder = 1;
}
